--- a/Themes/default/css/editor.css
+++ b/Themes/default/css/editor.css
@@ -8,7 +8,7 @@
 
 .editor, .rich_editor_frame
 {
-	border: 1px solid #808080;
+	border: 2px solid #808080 !important;
 	padding: 2px !important;
 	margin: 0;
 }
@@ -23,10 +23,10 @@
 {
 	height: 5px;
 	font-size: 0;
-	background: #eee url(../images/bbc/resize-handle.gif) no-repeat 50% 1px;
-	border: 1px solid #ddd;
+	background: #808080 url(../images/bbc/resize-handle.gif) no-repeat 50% 1px;
+	border: 1px solid #808080;
 	border-top-width: 0;
 	cursor: s-resize;
 	width: 100%;
-	padding: 0 2px;
+	padding: 0 2px 0 4px;
 }
