--- a/Themes/LemmingsDark/css/index.css
+++ b/Themes/LemmingsDark/css/index.css
@@ -4,7 +4,7 @@
 /* Normal, standard links. */
 a:link, a:visited
 {
-	color: #44E;
+	color: #99F;
 	text-decoration: none;
 }
 a:hover
@@ -16,7 +16,7 @@ a:hover
 /* Links that open in a new window. */
 a.new_win:link, a.new_win:visited
 {
-	color: #44E;
+	color: #99F;
 	text-decoration: none;
 }
 a.new_win:hover
@@ -45,10 +45,10 @@ body#help_popup
 	padding: 1em;
 }
 
-/* use dark grey for the text, leaving #000 for headers etc */
+/* use dark grey for the text, leaving #fff for headers etc */
 body, td, th, tr
 {
-	color: #222;
+	color: #DDD;
 }
 
 /* This division wraps the entire forum when a forum width is set. */
@@ -79,8 +79,8 @@ input, button, select, textarea
 {
 	font: 95%/115% verdana, Helvetica, sans-serif;
 	color: #000;
-	background: #fff;
-	border: 2px solid #000;
+	background: #ddd;
+	border: 2px solid #fff;
 	padding: 3px;
 }
 
@@ -105,23 +105,24 @@ textarea
 /* Buttons should be styled a bit differently, in order to make them look more button'ish. */
 .button_submit, .button_reset
 {
-	background: #fff url(../images/theme/submit_bg.png) no-repeat;
-	border: 2px solid #000;
+	background: #444 url(../images/theme/submit_bg.png) no-repeat;
+  color: #fff;
+	border: 2px solid #fff;
 	cursor: pointer;
 	font-weight: bold;
 	padding: 4px 3px 3px 3px;
 }
 input:hover, textarea:hover, select:hover
 {
-	border: 2px solid #222;
+	border: 2px solid #DDD;
 }
 button:hover
 {
-	border: 2px solid #FFF;
+	border: 2px solid #000;
 }
 .button_submit:hover, .button_reset:hover
 {
-	border: 2px solid #FFF;
+	border: 2px solid #BBB;
 	background: url(../images/theme/submit_bg.png) no-repeat 0 -138px #cde7ff;
 }
 input:focus, textarea:focus, button:focus, select:focus
@@ -152,13 +153,13 @@ hr, .hrcolor
 	height: 2px;
 	border: 0;
 	color: #ccc;
-	background-color: #44E;
+	background-color: #99F;
 }
 
-/* By default set the color on these tags as #000. */
+/* By default set the color on these tags as #fff. */
 h1, h2, h3, h4, h5, h6
 {
-	color: #000;
+	color: #fff;
 	font-size: 1em;
 	margin: 0;
 	padding: 0;
@@ -301,7 +302,7 @@ ul.reset, ul.reset li
 blockquote.bbc_standard_quote, blockquote.bbc_alternate_quote
 {
 	font-size: x-small;
-	color: #000;
+	color: #fff;
 	line-height: 1.4em;
 	background: url(../images/theme/quote.png) 0.1em 0.1em no-repeat;
 	border-top: 2px solid #99A;
@@ -423,7 +424,7 @@ code.bbc_code
 .highlight2
 {
 	background-color: #D1E1EF;
-	color: #000 !important;
+	color: #fff !important;
 }
 
 /* Generic, mostly color-related, classes.
@@ -439,7 +440,7 @@ code.bbc_code
 }
 .catbg, .catbg2, tr.catbg td, tr.catbg2 td, tr.catbg th, tr.catbg2 th
 {
-	color: #fff;
+	color: #000;
 	font-family: arial, helvetica, sans-serif;
 	font-size: 1.1em;
 	font-weight: bold;
@@ -453,11 +454,11 @@ tr.titlebg th, tr.titlebg2 th, td.titlebg, td.titlebg2, tr.catbg th, tr.catbg2 t
 }
 tr.titlebg th a:link, tr.titlebg th a:visited, tr.titlebg2 td a:link, tr.titlebg2 td a:visited
 {
-	color: #222;
+	color: #DDD;
 }
 tr.catbg th a:link, tr.catbg th a:visited, tr.catbg2 td a:link, tr.catbg2 td a:visited
 {
-	color: #fff;
+	color: #000;
 }
 .catbg select
 {
@@ -468,18 +469,18 @@ tr.catbg th a:link, tr.catbg th a:visited, tr.catbg2 td a:link, tr.catbg2 td a:v
 /* Alternating backgrounds for posts, and several other sections of the forum. */
 .windowbg, #preview_body
 {
-	color: #000;
-	background-color: #BAC9BB;
+	color: #fff;
+	background-color: #465049;
 }
 .windowbg2
 {
-	color: #000;
-	background-color: #CDE0D2;
+	color: #fff;
+	background-color: #3D443D;
 }
 .windowbg3
 {
-	color: #000;
-	background-color: #cacdd3;
+	color: #fff;
+	background-color: #454649;
 }
 
 /* the page navigation area */
@@ -503,46 +504,46 @@ div.pagesection div.floatright input
 /* Colors for background of posts requiring approval */
 .approvebg
 {
-	color: #000;
+	color: #fff;
 	background-color: #ffeaea;
 }
 .approvebg2
 {
-	color: #000;
-	background-color: #fff2f2;
+	color: #fff;
+	background-color: #0002f2;
 }
 
 /* Color for background of *topics* requiring approval */
 .approvetbg
 {
-	color: #000;
+	color: #fff;
 	background-color: #e4a17c;
 }
 .approvetbg2
 {
-	color: #000;
+	color: #fff;
 	background-color: #f3bd9f;
 }
 
 /* Sticky topics get a different background */
 .stickybg
 {
-	background: #BABBC9;
+	background: #505060;
 }
 .stickybg2
 {
-	background: #CDD2E0;
+	background: #606868;
 }
 
 /* Locked posts get a different shade, too! */
 .lockedbg
 {
-	background: #AAB5AA;
+	background: #584040;
 	font-style: italic;
 }
 .lockedbg2
 {
-	background: #AAB5AA;
+	background: #584040;
 	font-style: italic;
 }
 
@@ -600,7 +601,7 @@ div.pagesection div.floatright input
 
 .holiday
 {
-	color: #000080;
+	color: #fff080;
 }
 
 /* Colors for warnings */
@@ -757,7 +758,7 @@ h3.catbg, h3.catbg2, h3.titlebg, h4.titlebg, h4.catbg
 }
 h3.catbg a:link, h3.catbg a:visited, h4.catbg a:link, h4.catbg a:visited, h3.catbg, .table_list tbody.header td, .table_list tbody.header td a
 {
-	color: #fff;
+	color: #EEE;
 }
 h3.catbg2 a, h3.catbg2
 {
@@ -770,12 +771,12 @@ h3.catbg a:hover, h4.catbg a:hover, .table_list tbody.header td a:hover
 }
 h3.catbg2 a:hover
 {
-	color: #fff;
+	color: #000;
 	text-decoration: none;
 }
 h3.titlebg a, h3.titlebg, h4.titlebg, h4.titlebg a
 {
-	color: #222;
+	color: #DDD;
 }
 h3.titlebg a:hover, h4.titlebg a:hover
 {
@@ -872,7 +873,7 @@ table.table_list a.collapse
 .table_grid tr.catbg, .table_grid tr.titlebg
 {
 	font-size: 0.95em;
-	border-bottom: 1px solid #fff;
+	border-bottom: 1px solid #000;
 }
 .table_grid tr.catbg th, .table_grid tr.titlebg th
 {
@@ -913,8 +914,8 @@ table.table_grid
 table.table_grid td
 {
 	padding: 3px;
-	border-bottom: 1px solid #fff;
-	border-right: 1px solid #fff;
+	border-bottom: 1px solid #000;
+	border-right: 1px solid #000;
 }
 
 /* GenericList */
@@ -1027,9 +1028,9 @@ table.table_grid thead tr.catbg th
 .roundframe
 {
 	padding: 0 10px;
-	background: #DDD;
-	border-left: 1px solid #c5c5c5;
-	border-right: 1px solid #c5c5c5;
+	background: #222;
+	border-left: 1px solid #4F4F4F;
+	border-right: 1px solid #4F4F4F;
 }
 .roundframe dl, .roundframe dt, .roundframe p
 {
@@ -1085,13 +1086,13 @@ span.lowerframe span
 ------------------------------------------------------- */
 .auto_suggest_div
 {
-	border: 1px solid #000;
+	border: 1px solid #fff;
 	position: absolute;
 	visibility: hidden;
 }
 .auto_suggest_item
 {
-	background-color: #ddd;
+	background-color: #222;
 }
 .auto_suggest_item_hover
 {
@@ -1124,7 +1125,7 @@ span.lowerframe span
 .dropmenu a
 {
 	display: block;
-	color: #000;
+	color: #fff;
 	text-decoration: none;
 }
 .dropmenu a span
@@ -1187,7 +1188,7 @@ span.lowerframe span
 .dropmenu li a.active
 {
 	background: url(../images/theme/menu_gfx.png) no-repeat 100% 0;
-	color: #fff;
+	color: #000;
 	font-weight: bold;
 }
 .dropmenu li a.active span.firstlevel
@@ -1198,7 +1199,7 @@ span.lowerframe span
 .dropmenu li a.firstlevel:hover, .dropmenu li:hover a.firstlevel
 {
 	background: url(../images/theme/menu_gfx.png) no-repeat 100% -30px;
-	color: #fff;
+	color: #000;
 	cursor: pointer;
 	text-decoration: none;
 }
@@ -1210,7 +1211,7 @@ span.lowerframe span
 .dropmenu li li a:hover, .dropmenu li li:hover>a
 {
 	background: #d4dbe4;
-	color: #000;
+	color: #fff;
 	text-decoration: none;
 }
 .dropmenu li:hover ul ul, .dropmenu li:hover ul ul ul
@@ -1227,7 +1228,7 @@ span.lowerframe span
 }
 .dropmenu li li.additional_items
 {
-	background-color: #fff;
+	background-color: #000;
 }
 
 /* The dropdown menu toggle image */
@@ -1263,7 +1264,7 @@ span.lowerframe span
 {
 	display: block;
 	font-size: 0.8em;
-	color: #000;
+	color: #fff;
 	background: #e8e8e8 url(../images/theme/menu_gfx.png) no-repeat 0 -60px;
 	padding: 0 0 0 8px;
 	margin-left: 12px;
@@ -1273,7 +1274,7 @@ span.lowerframe span
 .buttonlist ul li a:hover
 {
 	background: url(../images/theme/menu_gfx.png) no-repeat 0 0;
-	color: #fff;
+	color: #000;
 	text-decoration: none;
 }
 .buttonlist ul li a span
@@ -1286,13 +1287,13 @@ span.lowerframe span
 }
 .buttonlist ul li a:hover span
 {
-	background: #fff url(../images/theme/menu_gfx.png) no-repeat 100% 0;
+	background: #000 url(../images/theme/menu_gfx.png) no-repeat 100% 0;
 }
 /* the active one */
 .buttonlist ul li a.active
 {
 	background: #5a6c85 url(../images/theme/menu_gfx.png) no-repeat 0 -90px;
-	color: #fff;
+	color: #000;
 	font-weight: bold;
 }
 .buttonlist ul li a.active span
@@ -1651,7 +1652,7 @@ p.moderators
 	padding: 0 2em;
 	overflow: auto;
 	margin: 1em 0;
-	color: #575757; /* shouldn't be shorthand style due to a JS bug in IE! */
+	color: #C8C8C8; /* shouldn't be shorthand style due to a JS bug in IE! */
 }
 
 /* Styles for the info center on the board index.
@@ -2479,7 +2480,7 @@ ul.split_messages li a.split_icon
 ul.split_messages div.post
 {
 	padding: 1em 0 0 0;
-	border-top: 1px solid #fff;
+	border-top: 1px solid #000;
 }
 
 /* Styles for the merge topic section.
@@ -2597,10 +2598,10 @@ dl.register_form dd
 {
 	padding: 4px;
 	width: 32ex;
-	background-color: #fff;
-	color: #000;
+	background-color: #000;
+	color: #fff;
 	margin-left: 5ex;
-	border: 1px solid #000;
+	border: 1px solid #fff;
 }
 
 .valid_input
@@ -2609,7 +2610,7 @@ dl.register_form dd
 }
 .invalid_input
 {
-	background-color: #fff0f0;
+	background-color: #0000f0;
 }
 
 /* Styles for maintenance mode.
@@ -2730,7 +2731,7 @@ tr.windowbg td, tr.windowbg2 td, tr.approvebg td, tr.highlight2 td
 }
 .topic_table table thead
 {
-	border-bottom: 1px solid #fff;
+	border-bottom: 1px solid #000;
 }
 /* the subject column */
 .topic_table td
@@ -2785,8 +2786,8 @@ tr.windowbg td, tr.windowbg2 td, tr.approvebg td, tr.highlight2 td
 {
 	padding: 1em;
 	border: 1px solid #cc3344;
-	color: #000;
-	background-color: #ffe4e9;
+	color: #fff;
+	background-color: #4f1419;
 	margin-bottom: 1em;
 }
 .errorbox h3
@@ -3025,7 +3026,7 @@ div#profile_success
 .activity_stats li span
 {
 	display: block;
-	border: solid #000;
+	border: solid #fff;
 	border-width: 1px 1px 0 0;
 	text-align: center;
 }
@@ -3408,7 +3409,7 @@ dl.addrules dt.floatleft
 /* Used to indicate the current day in the grid. */
 .calendar_today
 {
-	background-color: #fff;
+	background-color: #000;
 }
 
 #month_grid
@@ -3439,7 +3440,7 @@ dl.addrules dt.floatleft
 {
 	text-align: center;
 	height: 29px;
-	border-top: 2px solid #fff;
+	border-top: 2px solid #000;
 	border-bottom: none;
 }
 #main_grid table.weeklist td.windowbg
@@ -3449,7 +3450,7 @@ dl.addrules dt.floatleft
 	width: 25px;
 	font-size: large;
 	padding: 0 7px;
-	border-bottom: 2px solid #fff;
+	border-bottom: 2px solid #000;
 }
 #main_grid table.weeklist td.weekdays
 {
@@ -3458,7 +3459,7 @@ dl.addrules dt.floatleft
 	padding: 4px;
 	text-align: left;
 	vertical-align: middle;
-	border-bottom: 2px solid #fff;
+	border-bottom: 2px solid #000;
 }
 #main_grid h3.weekly
 {
