Bit more tidyup needed still, but overall it's funcitonal now.

--- a/Themes/LemmingsDark/css/index.css
+++ b/Themes/LemmingsDark/css/index.css
@@ -639,7 +639,7 @@ a.moderation_link, a.moderation_link:visited
 	font-size: 0.9em;
 	line-height: 1.4em;
 	border: 1px solid #bbb;
-	background: #f5f5f0;
+	background: #252540;
 	margin: 0.2em 1px 1em 1px;
 }
 .description_board
