--- a/Themes/LemmingsDark/css/editor.css
+++ b/Themes/LemmingsDark/css/editor.css
@@ -23,7 +23,7 @@
 {
 	height: 5px;
 	font-size: 0;
-	background: #808080 url(../images/bbc/resize-handle.gif) no-repeat 50% 1px;
+	background: #C0C0C0 url(../images/bbc/resize-handle.gif) no-repeat 50% 1px;
 	border: 1px solid #808080;
 	border-top-width: 0;
 	cursor: s-resize;
