Whoops, an earlier fix got undone by accident.

--- a/Themes/LemmingsDark/css/index.css
+++ b/Themes/LemmingsDark/css/index.css
@@ -1743,7 +1743,7 @@ div.table_frame .table_list
 }
 .table_frame .table_list td.icon, .table_frame .table_list td.info, .table_frame .table_list td.stats
 {
-	border-right: 2px solid white;
+	border-right: 2px solid black;
 }
 #messageindex
 {
