--- a/Themes/LemmingsDark/css/index.css
+++ b/Themes/LemmingsDark/css/index.css
@@ -328,7 +328,7 @@ code.bbc_code
 	display: block;
 	font-family: "dejavu sans mono", "monaco", "lucida console", "courier new", monospace;
 	font-size: x-small;
-	background: #eef;
+	background: #1e170f;
 	border-top: 2px solid #999;
 	border-bottom: 2px solid #999;
 	line-height: 1.5em;
