Another (very minor) dark theme fix.

--- a/Themes/LemmingsDark/css/index.css
+++ b/Themes/LemmingsDark/css/index.css
@@ -3104,7 +3104,7 @@ div#profile_success
 	padding: 0.2em 0.5em 0.1em 0.2em;
 	font-size: 2.2em;
 	font-weight: bold;
-	color: #3f3f3f;
+	color: #BFBFBF;
 	float: left;
 }
 .list_posts
