--- a/Themes/LemmingsDark/css/index.css
+++ b/Themes/LemmingsDark/css/index.css
@@ -1,5 +1,9 @@
 @import url("../../default/css/index.css");
 
+#top_section .inner_wrap, #wrapper, #header, #footer .inner_wrap {
+  max-width: none;
+}
+
 input, button, select, textarea {
 	color: #ddd;
   background: #000;
@@ -155,13 +159,4 @@ div.cat_bar {
 
 .bbc_standard_quote {
   background-color: #040;
-}
-
-.bbc_spoiler {
-  background: #151;
-  color: #ddd;
-}
-
-.spoiler_content {
-  background: #030;
 }
